scss/theme/_blog.scss
// Make item columns full width
#item {
  // width: 100%;
}

/** Extra columns spacing **/
.extra-spacing:not(.col-12), :not(.col12) > .e-content {
  padding-right: 1rem;

  @include breakpoint(md) {
    padding-right: 0;
  }
}

/** Breadcrumbs styling **/
#breadcrumbs {
  padding-left: 0;
  display: flex;
  align-items: center;
  margin-top: -1rem;
  margin-bottom: 1rem;


  i {
    display: none;
  }

  span, a {
    padding: 0 0.5rem;
    &:first-child {
      padding-left: 0;
    }
  }

  span, a {
    &:not(:first-child)::before {
      color: #e7e9ed;
      content: "/";
      padding-right: 1rem;
    }
  }
}

/** Listing Container **/


/** Blog Listing **/
.blog-listing {

  .container {
    padding: 0 0 1.6rem !important;
    .columns {
        .column {
          margin-top: 1.6rem;
        }
    }
  }

  .bricklayer  {
    margin-bottom: 1.6rem;
  }

  .blog-posts  {
    margin-bottom: 1.6rem;
  }

  .bricklayer-column {
    padding: 0px;
    // padding-right: 25px;
  }

  .bricklayer-column:nth-child(3) {
    padding-left: 0.8rem;
  }

  .card {
    margin-bottom: 0rem;
    border: 0;
    box-shadow: 0 10px 45px -9px rgba(0,0,0,0.1);
    background-color: $bg-color;
    border-radius: $default-radius;
  }

  .card:not(:last-child) {
    margin-bottom: 0.8rem;
  }

  .card-footer {
    text-align: right;
  }

  .blog-date {
    font-size: 13px;
  }

  .label {

  }
}

/** Blog Item **/
.content-title {
  margin-bottom: 2rem;

  h2 {
    margin-bottom: 0.5rem;
  }
}

.label {
  font-size: 12px;
  text-transform: uppercase;
}

/** Pagination **/

.pagination {
  margin: 0px;
  padding: 0px;
}

ul.pagination {
  justify-content: center;
}

ul.pagination li {
  border: none;
  background: $bg-color;
  border-radius: $default-radius;
  margin: .1rem;
}

.prev-next {
  margin-top: 4rem;
}

/** Sidebar specific tweaks **/
#sidebar {

  .sidebar-content {
    background: $bg-color;
    border-radius: $default-radius;
    padding: .8rem;
    margin-bottom: .8rem;

    h1, h2, h3, h4 {
      margin-top: 0px;
    }

    &>p {
      margin: 0;
    }

    * {
      vertical-align: bottom;
    }

    :last-child {
      margin-bottom: 0;
    }
  }

  .sidebar-content:last-child {
    margin-bottom: 0rem;;
  }

  ul.related-pages {
    box-shadow: none;
    padding: 0;
    z-index: 1;

    li {
      border-bottom: 1px solid $border-color;
      &:last-child {
        border-bottom: 0;
      }
    }

  }

  ul.archives {
    list-style: none;
    margin-left: 0;

    .label {
      vertical-align: text-top;
    }
  }
}

